@@ -129,6 +129,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 == Changelog ==
 
 = 8.3.0 - xxxx-xx-xx =
+* Tweak - Credit card brand selection disabled when the "Legacy checkout experience" is enabled.
 * Add - Add Klarna to the available payment methods.
 * Tweak - Adds the tracking of a selected card brand when paying using co-branded credit cards.
 * Fix - The preferred card brand is used when paying with a co-branded credit card.
